--- a/games/pendu.html
+++ b/games/pendu.html
@@ -3,64 +3,243 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Jeu du Pendu Complet</title>
+<title>Jeu du Pendu Multi-Joueurs</title>
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
   body {
-    font-family: monospace, monospace;
-    white-space: pre;
-    background: #f0f0f0;
-    padding: 30px;
-    text-align: center;
-  }
-  #hangman-display {
-    font-size: 1.5em;
-    line-height: 1.2em;
-    margin-bottom: 20px;
+    font-family: 'Montserrat', sans-serif;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: flex-start;
     color: #333;
   }
-  #word-display {
-    font-size: 2.5em;
-    letter-spacing: 15px;
-    margin: 20px 0;
+  .container {
+    background: #fff;
+    max-width: 900px;
+    width: 90vw;
+    margin: 40px 20px;
+    border-radius: 15px;
+    box-shadow: 0 15px 50px rgb(0 0 0 / 0.3);
+    padding: 30px 40px;
   }
+
+  h1 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 2.8rem;
+    margin-bottom: 25px;
+    color: #45337f;
+  }
+  label {
+    font-weight: 600;
+    margin-top: 15px;
+    display: block;
+    font-size: 1.1rem;
+    color: #5a4a8b;
+  }
+  input[type=number],
+  input[type=text],
+  select {
+    font-size: 1.1rem;
+    padding: 8px 12px;
+    margin-top: 8px;
+    border-radius: 6px;
+    border: 2px solid #667eea;
+    outline-offset: 2px;
+    width: 120px;
+    color: #45337f;
+  }
+  button {
+    margin-top: 20px;
+    background: #667eea;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    font-weight: 700;
+    font-size: 1.3rem;
+    padding: 12px 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 5px 15px rgb(102 126 234 / 0.7);
+  }
+  button:hover:not(:disabled) {
+    background: #5c6bc0;
+  }
+  button:disabled {
+    background: #ddd;
+    color: #999;
+    cursor: not-allowed;
+    box-shadow: none;
+  }
+
+  /* Setup screen */
+  #setup-screen {
+    max-width: 500px;
+    margin: 0 auto 30px;
+    border-radius: 15px;
+    box-shadow: 0 6px 20px rgb(0 0 0 / 0.1);
+    padding: 30px 25px;
+    background: #f5f6fa;
+  }
+
+  /* Hangman ASCII drawing area */
+  #hangman-display {
+    font-family: monospace, monospace;
+    background: #f0f0f0;
+    padding: 18px 24px;
+    border-radius: 12px;
+    margin: 30px auto;
+    max-width: 300px;
+    white-space: pre;
+    box-shadow: inset 0 0 8px rgb(0 0 0 / 0.1);
+    color: #333;
+    font-size: 1.4rem;
+    line-height: 1.1em;
+  }
+
+  #word-display {
+    font-size: 2.8rem;
+    letter-spacing: 18px;
+    font-weight: 700;
+    color: #45337f;
+    margin: 30px 0 15px;
+    user-select: none;
+    text-transform: uppercase;
+  }
+
   #virtual-keyboard {
-    margin: 20px auto;
-    max-width: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 620px;
+    margin: 15px auto 25px;
+    gap: 10px;
   }
   button.key {
-    font-size: 1.3em;
-    margin: 5px;
-    padding: 10px 15px;
+    width: 52px;
+    height: 52px;
+    border-radius: 10px;
+    background: #667eea;
+    border: none;
+    font-weight: 700;
+    font-size: 1.3rem;
+    color: #fff;
     cursor: pointer;
-    border-radius: 5px;
-    border: 1px solid #333;
-    background-color: #fff;
+    transition: background-color 0.3s ease, transform 0.15s ease;
+    user-select: none;
+  }
+  button.key:hover:not(:disabled) {
+    background: #5064cc;
+    transform: scale(1.15);
   }
   button.key:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
+    background: #bbb;
+    cursor: default;
+    color: #666;
+    transform: scale(1);
   }
+
   #message {
-    margin-top: 20px;
-    font-size: 1.4em;
-    font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #3a3a3a;
+    min-height: 2.2em;
+    text-align: center;
+    margin-bottom: 15px;
   }
+  #message.win {
+    color: #4caf50;
+  }
+  #message.lose {
+    color: #e53935;
+  }
+
   #restart {
+    display: none;
+  }
+
+  /* Scoreboard styles */
+  #scoreboard {
     margin-top: 30px;
-    padding: 10px 30px;
-    font-size: 1.2em;
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #scoreboard th, #scoreboard td {
+    border: 1px solid #ddd;
+    padding: 10px 18px;
+    font-weight: 600;
+    text-align: center;
+    color: #45337f;
+  }
+  #scoreboard th {
+    background: #786da9;
+    color: white;
+    font-size: 1.1rem;
+  }
+  #scoreboard td {
+    font-size: 1rem;
+  }
+
+  /* Responsive */
+  @media (max-width: 650px) {
+    #word-display {
+      font-size: 2rem;
+      letter-spacing: 12px;
+    }
+    button.key {
+      width: 44px;
+      height: 44px;
+      font-size: 1.1rem;
+    }
   }
 </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Jeu du Pendu Multi-Joueurs</h1>
 
-<h1>Jeu du Pendu - Mode Complet</h1>
+    <section id="setup-screen">
+      <label for="player-count">Nombre de joueurs :</label>
+      <input type="number" id="player-count" min="2" max="6" value="2" />
 
-<div id="hangman-display"></div>
-<div id="word-display"></div>
-<div id="virtual-keyboard"></div>
-<div id="message"></div>
-<button id="restart" style="display:none;">Recommencer</button>
+      <label for="starting-player">Joueur qui commence à faire deviner (1 - N) :</label>
+      <input type="number" id="starting-player" min="1" max="6" value="1" />
+
+      <label for="rounds-number">Nombre de manches (un passage par joueur) :</label>
+      <input type="number" id="rounds-number" min="1" max="20" value="3" />
+
+      <button id="start-button">Démarrer la partie</button>
+    </section>
+
+    <section id="game-screen" style="display:none;">
+      <div id="info-bar" style="text-align:center; margin-bottom: 10px;">
+        <strong>Manche <span id="current-round">1</span> / <span id="total-rounds"></span></strong> - 
+        <strong>Tour du joueur <span id="current-guessing-player">1</span></strong>
+      </div>
+      
+      <div id="hangman-display"></div>
+      <div id="word-display"></div>
+      <div id="virtual-keyboard"></div>
+      <div id="message"></div>
+      <button id="restart">Recommencer</button>
+
+      <h2 style="text-align:center; margin-top: 40px;">Classement des joueurs</h2>
+      <table id="scoreboard">
+        <thead>
+          <tr><th>Joueur</th><th>Points</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+  </div>
 
 <script>
   const hangmanStates = [
@@ -138,15 +317,13 @@
 
   const maxWrong = hangmanStates.length - 1;
 
-  const secretWord = prompt("Joueur 1, entrez un mot secret en majuscules (A-Z) :").toUpperCase().trim();
-  if (!secretWord || !/^[A-Z]+$/.test(secretWord)) {
-    alert("Mot invalide, rechargez la page et recommencez.");
-    throw new Error("Mot invalide");
-  }
-
-  const wordArray = secretWord.split('');
-  let guessedWord = Array(secretWord.length).fill('_');
-  let wrongGuesses = 0;
+  // Setup DOM Elements
+  const setupScreen = document.getElementById('setup-screen');
+  const gameScreen = document.getElementById('game-screen');
+  const startButton = document.getElementById('start-button');
+  const playerCountInput = document.getElementById('player-count');
+  const startingPlayerInput = document.getElementById('starting-player');
+  const roundsNumberInput = document.getElementById('rounds-number');
 
   const hangmanDisplay = document.getElementById('hangman-display');
   const wordDisplay = document.getElementById('word-display');
@@ -154,41 +331,26 @@
   const messageDiv = document.getElementById('message');
   const restartBtn = document.getElementById('restart');
 
-  function updateDisplay() {
-    hangmanDisplay.textContent = hangmanStates[wrongGuesses];
-    wordDisplay.textContent = guessedWord.join(' ');
-  }
+  const currentRoundSpan = document.getElementById('current-round');
+  const totalRoundsSpan = document.getElementById('total-rounds');
+  const currentGuessingPlayerSpan = document.getElementById('current-guessing-player');
 
-  function handleGuess(letter, button) {
-    button.disabled = true;
-    if (wordArray.includes(letter)) {
-      wordArray.forEach((char, index) => {
-        if (char === letter) guessedWord[index] = letter;
-      });
-      updateDisplay();
-      if (!guessedWord.includes('_')) {
-        messageDiv.textContent = "🎉 Félicitations, vous avez gagné !";
-        disableAllKeys();
-        restartBtn.style.display = 'inline-block';
-      }
-    } else {
-      wrongGuesses++;
-      updateDisplay();
-      if (wrongGuesses === maxWrong) {
-        messageDiv.textContent = `💀 Perdu ! Le mot était : ${secretWord}`;
-        guessedWord = wordArray.slice();
-        updateDisplay();
-        disableAllKeys();
-        restartBtn.style.display = 'inline-block';
-      }
-    }
-  }
+  const scoreboardTableBody = document.querySelector('#scoreboard tbody');
 
-  function disableAllKeys() {
-    document.querySelectorAll('button.key').forEach(btn => btn.disabled = true);
-  }
+  // Game State Variables
+  let numPlayers, currentRound, totalRounds;
+  let players = [];
+  let scores = [];
+  let wordSetterIndex;  // Player index who sets the word
+  let wordGuesserIndex; // Player index who guesses
+  let secretWord;
+  let wordArray = [];
+  let guessedWord = [];
+  let wrongGuesses;
+  let gameActive = false;
 
   function createKeyboard() {
+    keyboardDiv.innerHTML = '';
     for(let i = 65; i <= 90; i++) {
       const letter = String.fromCharCode(i);
       const btn = document.createElement('button');
@@ -199,14 +361,160 @@
     }
   }
 
-  restartBtn.addEventListener('click', () => {
-    location.reload();
+  function updateDisplay() {
+    hangmanDisplay.textContent = hangmanStates[wrongGuesses];
+    wordDisplay.textContent = guessedWord.join(' ');
+    currentRoundSpan.textContent = currentRound;
+    totalRoundsSpan.textContent = totalRounds;
+    currentGuessingPlayerSpan.textContent = wordGuesserIndex + 1;
+    updateScoreboard();
+  }
+
+  function disableAllKeys() {
+    document.querySelectorAll('button.key').forEach(btn => btn.disabled = true);
+  }
+
+  function revealWord() {
+    guessedWord = wordArray.slice();
+    updateDisplay();
+  }
+
+  function handleGuess(letter, button) {
+    if (!gameActive) return;
+    button.disabled = true;
+
+    if (wordArray.includes(letter)) {
+      wordArray.forEach((char, index) => {
+        if (char === letter) guessedWord[index] = letter;
+      });
+      updateDisplay();
+
+      if (!guessedWord.includes('_')) {
+        messageDiv.textContent = `🎉 Joueur ${wordGuesserIndex + 1} a deviné le mot !`;
+        messageDiv.className = 'win';
+        scores[wordGuesserIndex]++;
+        endTurn(true);
+      }
+    } else {
+      wrongGuesses++;
+      updateDisplay();
+
+      if (wrongGuesses === maxWrong) {
+        messageDiv.textContent = `💀 Perdu ! Le mot était : ${secretWord}`;
+        messageDiv.className = 'lose';
+        scores[wordSetterIndex]++;
+        revealWord();
+        endTurn(false);
+      }
+    }
+  }
+
+  function updateScoreboard() {
+    scoreboardTableBody.innerHTML = '';
+    players.forEach((p, i) => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>Joueur ${i+1}</td><td>${scores[i]}</td>`;
+      scoreboardTableBody.appendChild(tr);
+    });
+  }
+
+  function endTurn(won) {
+    gameActive = false;
+    disableAllKeys();
+    restartBtn.style.display = 'inline-block';
+
+    // Changement des rôles pour la prochaine manche
+    // Si devine -> devineur devient poseur
+    // Sinon poseur reste poseur, devineur passe au joueur suivant (modulo)
+    if (won) {
+      wordSetterIndex = wordGuesserIndex;
+      wordGuesserIndex = (wordGuesserIndex + 1) % numPlayers;
+    } else {
+      wordGuesserIndex = (wordGuesserIndex + 1) % numPlayers;
+    }
+
+    // Passage à la manche suivante si on a fini le nombre de manches
+    if (currentRound >= totalRounds * numPlayers) {
+      messageDiv.textContent += ' 🏆 Partie terminée ! Regardez le classement ci-dessous.';
+      restartBtn.textContent = 'Nouvelle partie';
+      restartBtn.onclick = () => location.reload();
+      return;
+    }
+  }
+
+  // Demander le mot à faire deviner au joueur setter
+  async function promptForWord() {
+    let promptText = `Joueur ${wordSetterIndex+1}, entrez un mot secret (A-Z uniquement) :`;
+    let word;
+    do {
+      word = prompt(promptText, '').toUpperCase().trim();
+      if (word === null) return null;
+    } while (!word || !/^[A-Z]+$/.test(word));
+    return word;
+  }
+
+  async function startTurn() {
+    messageDiv.textContent = '';
+    restartBtn.style.display = 'none';
+    wrongGuesses = 0;
+    hangmanDisplay.textContent = hangmanStates[0];
+
+    // Le setter entre un mot
+    secretWord = await promptForWord();
+    if (!secretWord) {
+      messageDiv.textContent = 'Partie interrompue.';
+      gameActive = false;
+      return;
+    }
+
+    wordArray = secretWord.split('');
+    guessedWord = Array(wordArray.length).fill('_');
+    
+    createKeyboard();
+    updateDisplay();
+
+    gameActive = true;
+    currentRound++;
+    currentRoundSpan.textContent = currentRound;
+  }
+
+  startButton.addEventListener('click', async () => {
+    numPlayers = parseInt(playerCountInput.value);
+    let starter = parseInt(startingPlayerInput.value) - 1;
+    totalRounds = parseInt(roundsNumberInput.value);
+
+    if (isNaN(numPlayers) || numPlayers < 2 || numPlayers > 6) {
+      alert('Le nombre de joueurs doit être entre 2 et 6.');
+      return;
+    }
+    if (isNaN(starter) || starter < 0 || starter >= numPlayers) {
+      alert('Joueur qui commence invalide.');
+      return;
+    }
+    if (isNaN(totalRounds) || totalRounds < 1 || totalRounds > 20) {
+      alert('Le nombre de manches doit être entre 1 et 20.');
+      return;
+    }
+
+    players = Array(numPlayers).fill(null);
+    scores = Array(numPlayers).fill(0);
+    wordSetterIndex = starter;
+    wordGuesserIndex = (starter + 1) % numPlayers;
+    currentRound = 0;
+
+    setupScreen.style.display = 'none';
+    gameScreen.style.display = 'block';
+
+    await startTurn();
   });
 
-  // Initialisation
-  createKeyboard();
-  updateDisplay();
+  restartBtn.addEventListener('click', async () => {
+    if (currentRound < totalRounds * numPlayers) {
+      await startTurn();
+      messageDiv.textContent = '';
+      restartBtn.style.display = 'none';
+    }
+  });
 </script>
-
 </body>
 </html>
