--- a/games/pendu.html
+++ b/games/pendu.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Jeu du Pendu Multi-Joueurs avec Image & Clavier Configurable</title>
+<title>Jeu du Pendu Multi-Joueurs - CSS Graphic</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
@@ -43,7 +43,6 @@
     color: #5a4a8b;
   }
   input[type=number],
-  input[type=text],
   select {
     font-size: 1.1rem;
     padding: 8px 12px;
@@ -77,7 +76,6 @@
     box-shadow: none;
   }
 
-  /* Setup screen */
   #setup-screen {
     max-width: 520px;
     margin: 0 auto 30px;
@@ -94,25 +92,163 @@
     margin-bottom: 12px;
   }
 
-  /* Hangman image display */
-  #hangman-img {
-    max-width: 320px;
+  /* Zone de dessin pendu */
+  #hangman-canvas {
+    position: relative;
+    width: 220px;
+    height: 300px;
     margin: 30px auto 10px;
-    display: block;
-    user-select: none;
   }
 
-  #word-display {
-    font-size: 2.8rem;
-    letter-spacing: 18px;
-    font-weight: 700;
-    color: #45337f;
-    margin: 20px 0 10px;
-    user-select: none;
-    text-transform: uppercase;
-    text-align: center;
+  /* Base du poteau */
+  .pole-base {
+    width: 140px;
+    height: 12px;
+    background: #3a3a3a;
+    margin: 260px auto 0;
+    border-radius: 8px;
+  }
+  /* Poteau vertical */
+  .pole-vertical {
+    position: absolute;
+    width: 12px;
+    height: 260px;
+    background: #3a3a3a;
+    left: 50px;
+    top: 0;
+    border-radius: 6px;
+  }
+  /* Barre horizontale */
+  .pole-horizontal {
+    position: absolute;
+    width: 120px;
+    height: 12px;
+    background: #3a3a3a;
+    left: 50px;
+    top: 0;
+    border-radius: 6px;
+  }
+  /* Barre verticale courte (pour la corde) */
+  .pole-rope {
+    position: absolute;
+    width: 6px;
+    height: 30px;
+    background: #3a3a3a;
+    left: 160px;
+    top: 12px;
+    border-radius: 6px;
   }
 
+  /* Toutes les parties du pendu */
+  .part {
+    position: absolute;
+    display: none;
+  }
+
+  /* Tête */
+  .head {
+    width: 60px;
+    height: 60px;
+    border: 4px solid #3a3a3a;
+    border-radius: 50%;
+    top: 45px;
+    left: 130px;
+    background: #fafafa;
+    box-shadow: inset 0 0 12px rgba(0,0,0,0.1);
+  }
+
+  /* Corps */
+  .body {
+    width: 8px;
+    height: 100px;
+    background: #3a3a3a;
+    top: 105px;
+    left: 157px;
+    border-radius: 4px;
+  }
+
+  /* Bras gauche */
+  .left-arm {
+    width: 60px;
+    height: 10px;
+    background: #3a3a3a;
+    top: 120px;
+    left: 95px;
+    border-radius: 4px;
+    transform-origin: right center;
+    transform: rotate(-45deg);
+  }
+
+  /* Bras droit */
+  .right-arm {
+    width: 60px;
+    height: 10px;
+    background: #3a3a3a;
+    top: 120px;
+    left: 160px;
+    border-radius: 4px;
+    transform-origin: left center;
+    transform: rotate(45deg);
+  }
+
+  /* Jambe gauche */
+  .left-leg {
+    width: 60px;
+    height: 10px;
+    background: #3a3a3a;
+    top: 205px;
+    left: 95px;
+    border-radius: 4px;
+    transform-origin: right center;
+    transform: rotate(45deg);
+  }
+
+  /* Jambe droite */
+  .right-leg {
+    width: 60px;
+    height: 10px;
+    background: #3a3a3a;
+    top: 205px;
+    left: 160px;
+    border-radius: 4px;
+    transform-origin: left center;
+    transform: rotate(-45deg);
+  }
+
+  /* Visage (yeux croisés et bouche) */
+  .face {
+    position: absolute;
+    top: 65px;
+    left: 152px;
+    width: 16px;
+    height: 16px;
+  }
+  .face .eye-left, .face .eye-right {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-left: 2px solid #333;
+    border-bottom: 2px solid #333;
+    transform: rotate(-45deg);
+    top: 4px;
+  }
+  .face .eye-left {
+    left: 1px;
+  }
+  .face .eye-right {
+    right: 1px;
+  }
+  .face .mouth {
+    position: absolute;
+    top: 13px;
+    left: 4px;
+    width: 8px;
+    height: 4px;
+    border-top: 2px solid #333;
+    border-radius: 0 0 8px 8px;
+  }
+
+  /* Affichage flex du clavier */
   #virtual-keyboard {
     display: flex;
     flex-wrap: wrap;
@@ -143,6 +279,17 @@
     cursor: default;
     color: #666;
     transform: scale(1);
+  }
+
+  #word-display {
+    font-size: 2.8rem;
+    letter-spacing: 18px;
+    font-weight: 700;
+    color: #45337f;
+    margin: 20px 0 10px;
+    user-select: none;
+    text-transform: uppercase;
+    text-align: center;
   }
 
   #message {
@@ -200,8 +347,9 @@
       height: 44px;
       font-size: 1.1rem;
     }
-    #hangman-img {
-      max-width: 240px;
+    #hangman-canvas {
+      width: 180px;
+      height: 240px;
     }
   }
 </style>
@@ -236,7 +384,24 @@
       <strong>Tour du joueur <span id="current-guessing-player">1</span></strong>
     </div>
 
-    <img id="hangman-img" src="" alt="Image du pendu" />
+    <div id="hangman-canvas">
+      <div class="pole-base"></div>
+      <div class="pole-vertical"></div>
+      <div class="pole-horizontal"></div>
+      <div class="pole-rope"></div>
+
+      <div class="part head"></div>
+      <div class="part body"></div>
+      <div class="part left-arm"></div>
+      <div class="part right-arm"></div>
+      <div class="part left-leg"></div>
+      <div class="part right-leg"></div>
+      <div class="part face">
+        <div class="eye-left"></div>
+        <div class="eye-right"></div>
+        <div class="mouth"></div>
+      </div>
+    </div>
 
     <div id="word-display"></div>
     <div id="virtual-keyboard"></div>
@@ -254,13 +419,6 @@
 </div>
 
 <script>
-  // Images à inclure dans dossier 'assets', nommées "hangman0.png" à "hangman9.png"
-  const maxWrong = 9;
-  const hangmanImagePaths = [];
-  for (let i = 0; i <= maxWrong; i++) {
-    hangmanImagePaths.push(`assets/hangman${i}.png`);
-  }
-
   // Claviers
   const keyboards = {
     azerty: ['A','Z','E','R','T','Y','U','I','O','P','Q','S','D','F','G','H','J','K','L','M','W','X','C','V','B','N'],
@@ -268,7 +426,18 @@
     alpha: 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('')
   };
 
-  // Sélecteurs DOM
+  // Parties du pendu dans l'ordre d'affichage (10 étapes)
+  const partsOrder = [
+    'head',
+    'body',
+    'left-arm',
+    'right-arm',
+    'left-leg',
+    'right-leg',
+    'face', // Affichage du visage (yeux croisés + bouche)
+  ];
+
+  // DOM
   const setupScreen = document.getElementById('setup-screen');
   const gameScreen = document.getElementById('game-screen');
   const startButton = document.getElementById('start-button');
@@ -277,7 +446,7 @@
   const roundsNumberInput = document.getElementById('rounds-number');
   const keyboardLayoutSelect = document.getElementById('keyboard-layout');
 
-  const hangmanImg = document.getElementById('hangman-img');
+  const hangmanCanvas = document.getElementById('hangman-canvas');
   const wordDisplay = document.getElementById('word-display');
   const keyboardDiv = document.getElementById('virtual-keyboard');
   const messageDiv = document.getElementById('message');
@@ -289,7 +458,7 @@
 
   const scoreboardTableBody = document.querySelector('#scoreboard tbody');
 
-  // Variables de jeu
+  // Variables
   let numPlayers, currentRound, totalRounds;
   let scores = [];
   let wordSetterIndex;
@@ -301,7 +470,6 @@
   let gameActive = false;
   let currentKeyboard = keyboards.azerty;
 
-  // Création clavier virtuel selon layout
   function createKeyboard() {
     keyboardDiv.innerHTML = '';
     currentKeyboard.forEach(letter => {
@@ -313,10 +481,16 @@
     });
   }
 
-  // Mise à jour affichages
+  function updateHangman() {
+    // On affiche les parties en fonction des erreurs
+    partsOrder.forEach((part, index) => {
+      const el = hangmanCanvas.querySelector('.' + part);
+      if (el) el.style.display = index < wrongGuesses ? 'block' : 'none';
+    });
+  }
+
   function updateDisplay() {
-    hangmanImg.src = hangmanImagePaths[wrongGuesses];
-    hangmanImg.alt = `Image du pendu erreur ${wrongGuesses} sur ${maxWrong}`;
+    updateHangman();
     wordDisplay.textContent = guessedWord.join(' ');
     currentRoundSpan.textContent = currentRound;
     totalRoundsSpan.textContent = totalRounds;
@@ -324,18 +498,15 @@
     updateScoreboard();
   }
 
-  // Désactive toutes les touches
   function disableAllKeys() {
     document.querySelectorAll('button.key').forEach(btn => btn.disabled = true);
   }
 
-  // Révèle le mot complet
   function revealWord() {
     guessedWord = wordArray.slice();
     updateDisplay();
   }
 
-  // Gestion des clics sur lettres
   function handleGuess(letter, button) {
     if (!gameActive) return;
     button.disabled = true;
@@ -357,7 +528,8 @@
       wrongGuesses++;
       updateDisplay();
 
-      if (wrongGuesses === maxWrong) {
+      // Afficher visage et mouth à la 7e erreur
+      if (wrongGuesses === partsOrder.length) {
         messageDiv.textContent = `💀 Perdu ! Le mot était : ${secretWord}`;
         messageDiv.className = 'lose';
         scores[wordSetterIndex]++;
@@ -367,7 +539,6 @@
     }
   }
 
-  // Mise à jour du tableau des scores
   function updateScoreboard() {
     scoreboardTableBody.innerHTML = '';
     for (let i=0; i < numPlayers; i++) {
@@ -377,7 +548,6 @@
     }
   }
 
-  // Fin de la manche et passage à la suivante
   function endTurn(won) {
     gameActive = false;
     disableAllKeys();
@@ -398,7 +568,6 @@
     }
   }
 
-  // Demande mot au setter
   async function promptForWord() {
     let promptText = `Joueur ${wordSetterIndex+1}, entrez un mot secret (A-Z uniquement) :`;
     let word;
@@ -409,7 +578,6 @@
     return word;
   }
 
-  // Démarre un tour
   async function startTurn() {
     messageDiv.textContent = '';
     restartBtn.style.display = 'none';
@@ -430,7 +598,6 @@
     gameActive = true;
   }
 
-  // Bouton démarrer
   startButton.addEventListener('click', async () => {
     numPlayers = parseInt(playerCountInput.value);
     let starter = parseInt(startingPlayerInput.value) - 1;
@@ -462,7 +629,6 @@
     await startTurn();
   });
 
-  // Bouton recommencer manche
   restartBtn.addEventListener('click', async () => {
     if (currentRound < totalRounds * numPlayers) {
       await startTurn();
@@ -470,7 +636,6 @@
       restartBtn.style.display = 'none';
     }
   });
-
 </script>
 
 </body>
